--- a/home.scss
+++ b/home.scss
@@ -2,83 +2,248 @@ body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.content-logo {
-    position: relative;
-    width: 30%;
-    left: 0;
-    top: 0;
-    background: #000;
-    z-index: 1;
-    border-radius: 0 100px 100px 0;
-    justify-content: end;
-    display: flex;
 
+a {
+    text-decoration: none;
+    color: #fff;
 }
+
+    
 .header {
-    background:  #fff; 
-    box-shadow: 1px -1px 20px 0px #333 ;
     display: flex;
-    align-items: center;
+    background-color: #fff;
     width: 100%;
-    gap: 0;
-    justify-content: space-between;
-    &__logo {
-        width: 120px;
-        height: 120px;
+    box-shadow: 3px 15px 15px -4px rgba(0,0,0,0.42);
+
+    @media (max-width: 750px) {
+        align-items: center;
+        justify-content: space-between;
     }
+
+    .logo {
+        width: 40%;
+        border-top-right-radius: 100px;
+        border-bottom-right-radius: 100px;
+        display: flex;
+        justify-content: end;
+        background-color: rgb(9, 8, 82);
+
+        @media (max-width: 750px) {
+            width: 60%;
+        }
+
+        &__img {
+            width: 120px;
+            height: 120px;
+        }
+    }
+
     &__nav {
-        min-width: 300px;
-        padding-right: 120px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        width: 60%;
+        color: #fff;
+        padding: 40px 0;
+        align-items: center;
+
+        @media (max-width: 750px) {
+            display: none;
+        }
+        
         &-item {
-            margin-right: 80px;
-            color: #000;
-            font-size: 23px;
-            text-shadow: 0.1em 0.1em 0.2em black;
+            background-color: rgb(9, 8, 82);
+            border-radius: 30px;
+            padding: 10px 0;
+            font-size: 14px;
+            min-width: 133.57px;
+            text-align: center;
+
             &:hover {
                 cursor: pointer;
-            }
-            &--margin {
-                margin-right: 0;
             }
         }
     }
 }
-.anchor {
-    text-decoration: none;
+
+.hamburguesa {
+    display: none;
+    flex-direction: column;
+
+    @media (max-width: 750px) {
+        display: inline-block;
+        margin-right: 30px;
+    }
+
+    &__item {
+        display: block;
+        width: 50px;
+        height: 8px;
+        margin-bottom: 5px;
+        background-color: rgb(9, 8, 82);
+    }
+
+}
+
+.container-desplegable {
+    display: none;
+    justify-content: end;
+}
+
+.desplegable {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    background-color: rgb(9, 8, 82);
+    display: inline-block;
+
+    &__item {
+        display: block;
+        text-align: center;
+        padding: 5px 50px;
+        border-bottom: solid 2px white;
+    }
 }
 
 .hero {
-    width: 80%;
-    margin: auto;
+    width: 100%;
+    position: relative;
+
     display: flex;
     flex-direction: column;
-    padding: 130px 0;
+    justify-content: center;
+    height: 400px;
+    align-items: center;
+    text-align: center;
+
     &__title {
-        font-size: 50px;
-        font-weight: bold;
-        margin: 0;
-        text-shadow: 10px 10px 5px gray;
+        color: rgb(9, 8, 82);
+        font-size: 60px;
+        text-shadow: 1px 0px 1px #CCCCCC, 0px 1px 1px #EEEEEE, 2px 1px 1px #CCCCCC, 1px 2px 1px #EEEEEE, 3px 2px 1px #CCCCCC, 2px 3px 1px #EEEEEE, 4px 3px 1px #CCCCCC, 3px 4px 1px #EEEEEE, 5px 4px 1px #CCCCCC, 4px 5px 1px #EEEEEE, 6px 5px 1px #CCCCCC, 5px 6px 1px #EEEEEE, 7px 6px 1px #CCCCCC;
+
+        @media (max-width: 750px) {
+            font-size: 40px;
+            max-width: 300px;
+        }
+        @media (max-width: 290px) {
+            font-size: 30px;
+        }
     }
-    &__descripcion {
-        font-size: 20px;
+}
+
+.video-Bolivia {
+    width: 100%;
+    background-color: rgb(9, 8, 82);
+    padding-bottom: 40px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    
+    
+    &__title {
+        color: #fff;
+        font-size: 40px;
+        letter-spacing: 6px;
+        word-spacing: 10px;
+        margin-bottom: 0;
+        text-shadow: 0.1em 0.1em 0.2em #fff;
+        text-align: center;
+
+        @media (max-width: 750px) {
+            font-size: 30px;
+            letter-spacing: 0;
+        }
     }
+
+    &__subtitle {
+        color: #fff;
+        margin-top: 10;
+        margin-bottom: 30px;
+        font-size: 15px;
+        word-spacing: 10px;
+        letter-spacing: 5px;
+    }
+
+    &__video {
+        width: 80%;
+        height: 400px;
+        border-radius: 20px;
+
+        @media (max-width: 750px) {
+            height: 200px;
+        }
+    }
+}
+
+.container-titles {
+    background-color: rgb(9, 8, 82);
+    border-radius: 150px;
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    height: 45px;
+    overflow: hidden;
 }
 
 .container__menu {
     padding-top: 100px;
     margin-top: 100px;
+
+    @media (max-width: 750px) {
+        padding-top: 50px;
+        margin-top: 50px;
+    }
+
     &-title {
         font-size: 30px;
         text-shadow: 0.1em 0.1em 0.2em #fff;
-        background-color: #000;
-        border-radius: 150px;
         color: #fff;
-        width: 80%;
-        margin: auto;
-        text-align: center;
-        padding-bottom: 5px;
-        font-weight: lighter;
+        margin: 0;
+        position: relative;
+        
+
+        @media (max-width: 750px) {
+            font-size: 20px;
+        }
     }
+
+    &-span{
+        position: absolute;
+        right: 0;
+        width: 0;
+        background: rgb(9, 8, 82);
+        border-left: #fff;
+        text-shadow: 0.1em 0.1em 0.2em #fff;
+        animation: maquina 5s infinite alternate ;
+        height: 100vh;
+    }
+
+    &-title2 {
+        font-size: 30px;
+        text-shadow: 0.1em 0.1em 0.2em #fff;
+        color: #fff;
+        margin: 0;
+        position: relative;
+        
+
+        @media (max-width: 750px) {
+            font-size: 20px;
+        }
+    }
+
+    &-span2{
+        position: absolute;
+        right: 0;
+        width: 0;
+        background: rgb(9, 8, 82);
+        border-left: #fff;
+        text-shadow: 0.1em 0.1em 0.2em #fff;
+        animation: maquina2 5s infinite alternate ;
+        height: 100vh;
+    }
+
     .menu {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -161,55 +326,69 @@ body {
     font-size: 30px;
 }
 
+@keyframes maquina {
+    from {
+        width: 100%;
+    }
+    to {
+        width: 0;
+    }
+}
 
-.ceo {
+@keyframes maquina2 {
+    from {
+        width: 100%;
+    }
+    to {
+        width: 0;
+    }
+}
+
+.redes {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    color: #fff;
-    width: 100%;
-    padding: 40px 0;
-    background-color: #000;
-    
-    &__content {
-        display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 50px 60px;
+    background-color: rgb(9, 8, 82);
+
+    @media (max-width: 750px) {
+        flex-direction: column;
+        padding: 30px 20px 50px 20px;
+    }
+
+}
+
+.contenedores {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    @media (max-width: 750px) {
         flex-direction: column;
     }
-    &__content2 {
+
+    &__item {
         display: flex;
-        align-items: center;
         justify-content: center;
-    }
-    &__flag {
-        margin-left: 20px;
-        margin-top: 10px;
-    }
-    &__title {
-        font-size: 50px;
-        text-shadow: 0.1em 0.1em 0.2em #fff;
-        margin: 0;
-    }
-    &__name {
-        font-weight: lighter;
-        font-size: 20px;
-    }
-    &__photo{
-        width: 300px;
-        height: 300px;
-        border-radius: 53%;
-        margin-right: 40px;
-    }
-}
+        text-align: center;
+        flex-direction: row;
+        align-items: center;
 
+        @media (max-width: 750px) {
+            justify-content: space-between;
+            padding: 10px 0;
+        }
 
-::-webkit-scrollbar {
-    width: 12px;
-}
-::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-    border-radius: 10px;
-}
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+        &-img {
+            width: 50px;
+            height: 50px;
+            padding-right: 10px;
+        }
+
+        &-info {
+            color: #fff;
+            font-size: 20px;
+            font-weight: lighter;
+        }
+    }
 }
